<resources>
    <string name="app_name">My Application</string>
    <string name="track_order">Track Order</string>
    <string name="cancel">Cancel</string>
    <string name="estimated_time">estimated time</string>
    <string name="order_number">order number</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="order_number_value">#cb62966</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">we have recieved your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">your order has been confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="we_are_preparing_your_order">we are preparing your order</string>
    <string name="ready_to_pickup">Ready to pickup</string>
    <string name="your_order_is_ready_to_pickup">your order is ready to pickup</string>
</resources>